Fix alignment in footer

--- a/src/Login/Login.css
+++ b/src/Login/Login.css
@@ -26,6 +26,7 @@
 .Login-footer {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   margin: 30px 0 0 130px;
 }
 
